Fix padding on smaller screens

--- a/static/sass/_pattern_strip.scss
+++ b/static/sass/_pattern_strip.scss
@@ -441,6 +441,14 @@
     background-position: bottom !important;
     background-repeat: no-repeat;
     background-size: contain;
+
+    &.is-hero{
+      padding: 8rem;
+
+      @media screen and (max-width: $breakpoint-small - 1) {
+        padding: 4rem;
+      }
+    }
   }
 }
 
